--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
   "require": {
     "php": ">=5.3.3",
     "zendframework/zendframework": "2.3.3",
-    "doctrine/common": "2.3.*",
-    "doctrine/doctrine-module": "0.*",
-    "doctrine/doctrine-orm-module": "0.*"
+    "doctrine/doctrine-orm-module": "0.9.2",
+    "doctrine/migrations": "1.4.1",
+    "zf-commons/zfc-user": "1.4.2",
+    "zf-commons/zfc-user-doctrine-orm": "1.0.1"
   },
   "require-dev": {
     "zendframework/zend-developer-tools": "dev-master",
